# signailengine

./: -cli XINFO GROUPS raw-events  .env.example  .gitignore  BACKLOG.md  HANDOFF.md  README.md  deploy_aliyun.sh  docker-compose.aliyun.yml  docker-compose.yml  plan.md  pyproject.toml  run_full_stack.sh  self_check.py  self_check.sh  verify_deploy.sh
core/: __init__.py  alpha_collector.py  alpha_pipeline.py  config.py  event_flow.py  pipeline.py  router.py  schemas.py  signal_engine.py  state_engine.py  worker.py
discovery/: __init__.py  catalyst_common.py  catalyst_entity_extractor.py  catalyst_live_sources.py  catalyst_scanner.py  catalyst_ws_sources.py  flow_live_sources.py  flow_scanner.py  live_sources.py  momentum_source.py  multi_chain_resolver.py  pool_scanner.py  probe.py  repository.py  schemas.py  service.py  smart_money_detector.py  symbol_registry.py  venue_resolver.py  wallet_flow_projection.py
docs/: alibaba-cloud-production.md  alpha-candidate-async-collection.md  alpha-discovery-mvp.md  configuration.md  data-acquisition-implementation.md  decisions.md  deploy-aliyun-guide.md  dex-cex-listing-alert-plan.md  issues-data-acquisition.md  issues-phase-0-1.md  listing-monitor-feasibility.md  onchain-feature-phase-a.md  risk-policy.md  schemas.md  social-llm-alpha-pipeline.md  unified-alpha-architecture.md
execution/: __init__.py  base.py  cex_bridge.py  dex_executor.py  evm_adapter.py  evm_odos.py  evm_rpc.py  factory.py  reconciliation.py  solana_adapter.py  solana_jupiter.py  solana_rpc.py
infra/: __init__.py  alerts.py  checkpoints.py  feature_store.py  logging.py  metrics.py  postgres.py  raw_event_store.py  redis_stream.py  repository.py  settings.launch-alpha.example.yaml  settings.yaml
notifications/: telegram_publisher.py
(+98 files in other folders)
